<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/appTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_tittle" />

    <EditText
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/appTittle"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/power_label"
        android:inputType="numberDecimal" />
    
    <EditText
        android:id="@+id/critChance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/power"
        android:layout_below="@+id/power"
        android:ems="10"
        android:hint="@string/critChance_label"
        android:inputType="numberDecimal" />
    
    <EditText
        android:id="@+id/critDamage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/critChance"
        android:layout_below="@+id/critChance"
        android:ems="10"
        android:hint="@string/critDamage_label"
        android:inputType="numberDecimal" />    
    
    <EditText
        android:id="@+id/statPointTradeoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/critDamage"
        android:layout_below="@+id/critDamage"
        android:ems="10"
        android:hint="@string/statPointTradeoff"
        android:inputType="number" />

    <Button
        android:id="@+id/clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/run"
        android:layout_alignBottom="@+id/run"
        android:layout_alignRight="@+id/critDamage"
        android:onClick="cleanForm"
        android:text="@string/clean" />

    <Button
        android:id="@+id/run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statPointTradeoff"
        android:layout_toLeftOf="@+id/clean"
        android:onClick="calculate"
        android:text="@string/calc_label" />

    <TextView
        android:id="@+id/results"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/statPointTradeoff"
        android:layout_below="@+id/run"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/run"
        android:text="@string/results" />

    <TextView
        android:id="@+id/recommendation"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignBaseline="@+id/results"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/results"
        android:text="@string/recommendation" />

</RelativeLayout>